# socketify-app

./: README.md  pyproject.toml  run.bat
socketify_app/: app.py
socketify_app/resources/: home.py
socketify_app/templates/: home.html
socketify_app/utils/: jinja_templates.py
